# pybind_scikit_example

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
cmake/: build_options.cmake
src/bingo_cpp/: bindings.cpp  bingo.cpp  bingo.hpp
src/pingo_cpp/: CMakeLists.txt  bindings.cpp  pingo.cpp  pingo.hpp
src/pingo_cpp/tests/: test_pingo.cpp
src/pybind_scikit_example/: __init__.py  __metadata__.py  example.py  profiling.py
tests/: .test_pingo.py.swp  test_bingo.py  test_pingo.py  test_profiling.py
