[build-system]
requires = [
    "wheel",
    "pybind11>=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.14.1",
    "ninja; platform_system!='Windows'",
]

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''
